syntax = "proto3";

package fs;

service Api {
    rpc Originate(OriginateRequest) returns (OriginateResponse) {}
    rpc Execute(ExecuteRequest) returns (ExecuteResponse) {}
    rpc SetVariables(SetVariablesReqeust) returns (SetVariablesResponse) {}
    rpc Bridge(BridgeRequest) returns (BridgeResponse) {}
    rpc Hangup(HangupRequest) returns (HangupResponse) {}
    rpc HangupMatchingVars(HangupMatchingVarsReqeust) returns (HangupMatchingVarsResponse) {}
}

message ErrorExecute {
    enum Type {
        ERROR = 0;
        USAGE = 1;
    }
    string message = 1;
    Type type = 2;
}

message ExecuteRequest {
    string command = 1;
    string args = 2;
}

message ExecuteResponse {
    string data = 1;
    ErrorExecute error = 2;
}

message HangupRequest {
    string uuid = 1;
    string cause = 2;
}

message HangupResponse {
    ErrorExecute error = 1;
}

message OriginateRequest {
    enum Strategy {
        FAILOVER = 0;
        MULTIPLE = 1;
    }

    message Extension {
        string appName = 1;
        string args = 2;
    }

    map<string, string> variables = 1;
    repeated string endpoints = 2;
    Strategy strategy = 3;
    string destination = 4;
    int32 timeout = 5;
    string callerNumber = 6;
    string callerName = 7;
    string context = 8;
    string dialplan = 9;
    repeated Extension extensions = 10;
}

message OriginateResponse {
    string uuid = 1;
    ErrorExecute error = 2;
}

message BridgeRequest {
    string leg_a_id = 1;
    string leg_b_id = 2;
    string leg_b_reserve_id = 3;
}

message BridgeResponse {
    string uuid = 1;
    ErrorExecute error = 2;
}

message SetVariablesReqeust {
    string uuid = 1;
    map<string, string> variables = 2;
}

message SetVariablesResponse {
    ErrorExecute error = 1;
}

message HangupMatchingVarsReqeust {
    string cause = 1;
    map<string, string> variables = 2;
}

message HangupMatchingVarsResponse {
    int32 count = 1;
}